--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Environment variables (NEVER commit API keys!)
+.env
+*.env
+.env.local
+.env.production
+
 # Python
 __pycache__/
 *.py[cod]
@@ -16,6 +22,8 @@ parts/
 sdist/
 var/
 wheels/
+pip-wheel-metadata/
+share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
@@ -24,10 +32,7 @@ wheels/
 venv/
 ENV/
 env/
-
-# Environment variables
-.env
-.env.local
+.venv/
 
 # IDE
 .vscode/
@@ -35,20 +40,26 @@ env/
 *.swp
 *.swo
 *~
-
-# OS
 .DS_Store
-Thumbs.db
-
-# Generated PDFs
-*.pdf
-complaint_*.pdf
-fir_draft_*.pdf
 
 # Logs
 *.log
+logs/
 
 # Temporary files
+*.tmp
 temp/
 tmp/
 
+# PDF files (generated complaints/FIRs)
+complaint_*.pdf
+fir_*.pdf
+Complaint_*.pdf
+FIR_*.pdf
+
+# OS files
+Thumbs.db
+.DS_Store
+
+# Render
+.render/
